[gd_scene load_steps=2 format=3 uid="uid://c9xy2p4m6nxvt"]

[ext_resource type="Script" path="res://scripts/ui/shop_system.gd" id="1_shop"]

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "SHOP"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="CoinCounter" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="Panel/VBoxContainer/CoinCounter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Coins: 0"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
